<resources>
    <string name="app_name">Where Are You</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_cont">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">Username</string>
    <string name="sign_up_for_account">Sign Up for Account?</string>
    <string name="user_not_exist">Username is not valid or doest not exist.</string>
    <string name="invalid_password">Password is invalid.</string>
    <string name="welcome">Welcome to Where Are You</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_if_account">Already have an account? Click</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="password_length_msg">Password is too short.</string>
    <string name="user_name_is_used">Username is used</string>
    <string name="sign_up_failed">SignUp failed try again later</string>
    <string name="log_out">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="chats">Chats</string>
    <string name="near_by_user">Nearby Users</string>
    <string name="group_removed">Previously cretaed group successfully removed.</string>
    <string name="failed_to_remove_group">Failed to remove previously created group.</string>
    <string name="searching">Searching...</string>
    <string name="searching_failed">Searching failed ...</string>
    <string name="WiFi_Off">Please turn on your WiFi</string>
    <string name="disconnected">Disconnected</string>
    <string name="connection_request_successful">Connection Request Successful</string>
    <string name="connection_request_unsuccessful">Connection Request Unsuccessful</string>
    <string name="new_device">New Device</string>
    <string name="group_owner">Group Owner@</string>
    <string name="something_wrong_msg">Something went wrong, please try again later</string>
    <string name="empty_message">Message must not be empty</string>
    <string name="failed_to_add_service">Failed to add service</string>
    <string name="p2p_not_supported">Wi-Fi P2P isn\'t supported on your device</string>
    <string name="p2p_error">P2p internal error</string>
    <string name="p2p_bussy">P2p bussy</string>
    <string name="hey_i_am_here">Hey, I\'m Here</string>
    <string name="waiting_for_gps">Waiting for GPS...</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_setting_enable_message">Your locations setting is not enabled. Please enabled it in settings menu.</string>
    <string name="location_setting">Location Setting</string>
    <string name="cancel">Cancel</string>
    <string name="meteres">mts</string>
    <string name="friends_location_doesnt_identify">Location from friend not yet received. No GPS signal.</string>
    <string name="location_provide_disabled">Please turn your location.</string>
    <string name="turn_on_location">Please turn your location</string>
    <string name="enable_camera">Enable Your Camera</string>
    <string name="Camera_setting_enable_message">Your camera setting is not enabled. Please enabled it in settings menu.</string>
    <string name="Camera_setting">Camera Setting</string>
    <string name="WiFi_Off_msg">Your wifi is turned off</string>
    <string name="turn_on">Enable WiFi</string>
    <string name="turn_on_wifi_msg">Please turn on your wifi</string>
    <string name="kms">Km</string>
</resources>