<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_15_dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_150_dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_png" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10_dp"
        android:text="@string/welcome_back"
        android:textColor="@color/black_shade"
        android:textSize="@dimen/sp_30_sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5_dp"
        android:text="@string/sign_in_cont"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/sp_20_sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30_dp"
        android:text="@string/user_name"
        android:textColor="@color/black_shade"
        android:textSize="@dimen/sp_20_sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5_dp"
        android:inputType="text"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20_sp"
        android:outlineAmbientShadowColor="@color/black_shade"
        tools:text="For demo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10_dp"
        android:text="@string/password"
        android:textColor="@color/black_shade"
        android:textSize="@dimen/sp_20_sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5_dp"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/black"
        android:inputType="textPassword"
        android:outlineAmbientShadowColor="@color/black_shade"
        android:textSize="@dimen/sp_20_sp" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10_dp"
        android:text="@string/forgot_password"
        android:textColor="@color/black_shade"
        android:textSize="@dimen/sp_15_sp" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/black_shade"
        android:layout_marginTop="@dimen/dp_15_dp"
        android:text="@string/sign_in"
        android:textSize="@dimen/sp_15_sp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10_dp"
        android:text="@string/sign_up_for_account"
        android:textColor="@color/black_shade"
        android:textSize="@dimen/sp_15_sp" />


</LinearLayout>

