<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_15_dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_80_dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_30_sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_5_dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20_sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_60_dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20_sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtUserNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20_sp"
        tools:text="For demo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20_dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20_sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10_dp"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20_sp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20_dp"
        android:text="@string/sign_up"
        android:textSize="@dimen/sp_20_sp" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_10_dp"
        android:text="@string/sign_in_if_account"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20_sp" />
</LinearLayout>


